# RunTrace

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  alembic.ini  docker-compose.ghcr.yml  docker-compose.yml  program.md  pyproject.toml  runtrace-implementation-spec.md  runtrace-product-design.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  containers.yml  publish-pypi.yml  release.yml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_project_progress_metric.py  0004_tag_registry.py  0005_instance_auth.py  0006_api_tokens.py  0007_password_auth.py  0009_project_access.py  0011_result_visualization_types.py  0012_identity_onboarding.py  0013_identity_locale.py
apps/api/runtrace_api/: __init__.py  auth.py  config.py  database.py  main.py  models.py  rtvis.py  schemas.py  seed.py
apps/mcp/runtrace_mcp/: __init__.py  server.py
apps/web/: Dockerfile  README.md  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/access/: page.tsx
apps/web/src/app/account/: page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/components/: access-admin.tsx  account-menu.tsx  account-settings.tsx  app-settings-dialog.tsx  app-settings-link.tsx  appearance-provider.tsx  appearance-settings.tsx  artifact-files.tsx  auth-provider.tsx  create-experiment-dialog.tsx  create-project-dialog.tsx  edit-experiment-dialog.tsx  i18n-provider.tsx  onboarding-tour.tsx  progress-chart.tsx  project-access-card.tsx  project-shell.tsx  project-workspace.tsx  projects-screen.tsx  record-actions.tsx  record-detail-dialog.tsx  run-curve-chart.tsx  run-detail-sheet.tsx  status-badge.tsx  tag-filter.tsx  visualization-renderer.tsx
apps/web/src/i18n/: config.ts
apps/web/src/i18n/messages/: de.ts  en.ts  es.ts  fr.ts  hi.ts  ja.ts  ko.ts  pt-BR.ts  ru.ts  zh-Hans.ts  zh-Hant.ts
apps/web/src/lib/: api.ts  auth.ts  types.ts  use-auto-refresh.ts
docs/: README.md  auth.md  features.md  integrations.md  live-metrics.md  plugin-terms.md  privacy.md
examples/: metric_demo.py
plugins/mono/: .mcp.json
plugins/mono/.claude-plugin/: plugin.json
plugins/runtrace/: .mcp.json
plugins/runtrace/.claude-plugin/: plugin.json
plugins/runtrace/.codex-plugin/: plugin.json
plugins/runtrace/skills/runtrace/: SKILL.md
plugins/runtrace/skills/runtrace-setup/: SKILL.md
plugins/runtrace/skills/runtrace-setup/agents/: openai.yaml
plugins/runtrace/skills/runtrace-setup/references/: connection.md  preflight.md
plugins/runtrace/skills/runtrace-visualizations/: SKILL.md
plugins/runtrace/skills/runtrace-visualizations/agents/: openai.yaml
plugins/runtrace/skills/runtrace-visualizations/references/: visualizations.md
plugins/runtrace/skills/runtrace/agents/: openai.yaml
plugins/runtrace/skills/runtrace/references/: connection.md  goals-and-loops.md  workflow.md
prototype/: .dockerignore  .npmrc  AGENTS.md  Dockerfile  README.md  design-qa.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.mjs
prototype/src/: App.jsx  App.test.jsx  styles.css
scripts/: check_release_version.py  reset-demo.sh  update.sh
tests/: conftest.py  test_api.py  test_api_full.py  test_auth.py  test_cli.py  test_credentials.py  test_mcp.py  test_migrations.py  test_sdk.py  test_visualizations.py
