[project]
name = "runtrace"
version = "0.1.0"
description = "Persistent experiment memory for autonomous research agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "fastembed>=0.7,<1",
  "httpx>=0.28,<1",
  "mcp>=1.12,<2",
  "psutil>=7,<8",
  "psycopg[binary]>=3.2,<4",
  "pgvector>=0.4,<1",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "typer>=0.16,<1",
  "uvicorn[standard]>=0.35,<1",
  "webauthn>=3,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
]

[project.scripts]
runtrace = "runtrace.cli:app"
runtrace-mcp = "runtrace_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "apps/api/runtrace_api",
  "apps/mcp/runtrace_mcp",
  "packages/python_sdk/runtrace",
]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "apps/mcp", "packages/python_sdk"]
testpaths = ["tests"]
addopts = "-q"
