[project]
name = "mono-research"
version = "0.1.6"
description = "Persistent experiment memory for autonomous research agents"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
keywords = ["agents", "experiments", "mcp", "research", "tracking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "httpx>=0.28,<1",
  "psutil>=7,<8",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
mcp = ["mcp>=1.12,<2"]
server = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "pgvector>=0.4,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]
embeddings = ["fastembed>=0.7,<1"]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
]

[project.scripts]
mono = "mono.cli:app"
mono-mcp = "mono_mcp.server:main"

[project.urls]
Homepage = "https://github.com/vano04/Mono"
Documentation = "https://github.com/vano04/Mono#readme"
Issues = "https://github.com/vano04/Mono/issues"
Repository = "https://github.com/vano04/Mono.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "apps/api/mono_api",
  "apps/mcp/mono_mcp",
  "packages/python_sdk/mono",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.agents",
  "/.claude-plugin",
  "/.github",
  "/.codex",
  "/MonoDemo",
  "/artifacts",
  "/design-qa.md",
  "/docs/verification-report.md",
]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "apps/mcp", "packages/python_sdk"]
testpaths = ["tests"]
addopts = "-q"
